Bug#33873: Fast ALTER TABLE doesn't work with multibyte character sets

The problem was that when comparing tables for a possible
fast alter table, the comparison was being performed using
the parsed information and not the final definition.
      
The solution is to use the possible final table layout to
compare if a fast alter is possible or not.